Added code up to Part 3: Stop word removal.

--- a/Lab_Assignment_07_Code.ipynb
+++ b/Lab_Assignment_07_Code.ipynb
@@ -2,21 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": null,
    "id": "2f6ee6e2-6c9d-4f1f-b833-618241119ded",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\nYou may need to run this cell the first time that you work with the code provided here. \\nUncomment the following line and run it.\\nAfter the first time you run it, you should not have to run it again.\\nYou may have to restart Jupyter after installing to get everything up and running\\n'"
-      ]
-     },
-     "execution_count": 89,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "'''\n",
     "You may need to run this cell the first time that you work with the code provided here. \n",
@@ -25,47 +14,15 @@
     "You may have to restart Jupyter after installing to get everything up and running\n",
     "'''\n",
     "\n",
-    "# %pip install wordcloud"
+    "#%pip install wordcloud"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": null,
    "id": "5a0a5221-514b-4d50-a786-651afcd82f9b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package punkt to\n",
-      "[nltk_data]     C:\\Users\\Sethc\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Package punkt is already up-to-date!\n",
-      "[nltk_data] Downloading package punkt_tab to\n",
-      "[nltk_data]     C:\\Users\\Sethc\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Package punkt_tab is already up-to-date!\n",
-      "[nltk_data] Downloading package stopwords to\n",
-      "[nltk_data]     C:\\Users\\Sethc\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Package stopwords is already up-to-date!\n",
-      "[nltk_data] Downloading package wordnet to\n",
-      "[nltk_data]     C:\\Users\\Sethc\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Package wordnet is already up-to-date!\n",
-      "[nltk_data] Downloading package vader_lexicon to\n",
-      "[nltk_data]     C:\\Users\\Sethc\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Package vader_lexicon is already up-to-date!\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 90,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Run this cellblock to import all the necessary libraries and packages for the code.\n",
     "import re\n",
@@ -94,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": null,
    "id": "64973b9d-007c-47e1-b6bc-203a0950b0fa",
    "metadata": {},
    "outputs": [],
@@ -102,6 +59,10 @@
     "# ========================================================\n",
     "# PART 0: CREATE FUNCTIONS TO UPLOAD AND LOAD TEXT DATA\n",
     "# ========================================================\n",
+    "\n",
+    "'''\n",
+    "No inputs necessary here, just run this code block.\n",
+    "'''\n",
     "\n",
     "# Function to load a CSV file (works in any Python environment)\n",
     "def load_csv(file_path=None):\n",
@@ -173,49 +134,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": null,
    "id": "f5093968-3b3a-4fb9-815a-99d2963ca0a6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Successfully loaded 'tweet_data.csv' with 3467 rows and 2 columns.\n",
-      "\n",
-      "Preview of your data:\n",
-      "                                               tweet      label\n",
-      "0  The only thing I got from college is a caffein...  sarcastic\n",
-      "1  I love it when professors draw a big question ...  sarcastic\n",
-      "2  Remember the hundred emails from companies whe...  sarcastic\n",
-      "3  Today my pop-pop told me I was not “forced” to...  sarcastic\n",
-      "4  @VolphanCarol @littlewhitty @mysticalmanatee I...  sarcastic\n",
-      "\n",
-      "Column names (you'll need these to select text columns):\n",
-      "0: tweet\n",
-      "1: label\n",
-      "Extracted 3467 text entries from column 'tweet'\n",
-      "Total length: 365036 characters\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# ========================================================\n",
     "# PART 0: YOU UPLOAD AND LOAD TEXT DATA\n",
     "# ========================================================\n",
     "\n",
+    "'''\n",
+    "This is where you will upload the csv file with the tweets. \n",
+    "If you are successful in uploading the data, you will see a message\n",
+    "    Sucessfully loaded '___.csv' with 3467 rows and two columns    \n",
+    "'''\n",
+    "\n",
     "# Replace with your file path or run without arguments for prompt\n",
-    "df = load_csv('tweet_data.csv')  \n",
+    "df = load_csv('???.csv')  \n",
     "\n",
     "\n",
+    "# Change '???' to the actual column name containing your text data\n",
     "if df is not None:\n",
-    "    text_column_name = 'tweet' # Replaced ??? with the name of the column containing the text data (tweets) we are analyzing.\n",
+    "    text_column_name = '???'\n",
     "    sample_text = extract_text_from_df(df, text_column_name)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": null,
    "id": "ae4f8ff7-b0bc-47fa-b4df-39da7a4715a1",
    "metadata": {},
    "outputs": [],
@@ -225,7 +171,9 @@
     "# ========================================================\n",
     "\n",
     "'''\n",
-    "The user can change how the text output is processed (lowercase conversion, punctuation removal, number removal) by stating true or false in the functions call.\n",
+    "Read through the code here to understand what the inputs are to the function \n",
+    "and what you as a user can change. Then run this code block. No inputs are required from you\n",
+    "here\n",
     "'''\n",
     "\n",
     "# Function to clean and preprocess text\n",
@@ -253,38 +201,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": null,
    "id": "62eed8ec-bdab-42c7-8bab-1e80b8446914",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--- Preprocessed Text ---\n",
-      "the only thing i got from college is a caffeine addiction\n",
-      "i love it when professors draw a big question mark next to my answer on an exam because i’m always like yeah i don’t either ¯\\_(ツ)_/¯\n",
-      "remember the hundred emails from companies when covid started getting real? i’ve gotten three in regards to support for protests. and only @savagexfenty shared helpful links and actually said black lives matter... we love capitalism 🥰🙌🏼\n",
-      "today my pop-pop told me i was not “forced” to go to college 🙃 okay sur...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# ========================================================\n",
     "# PART 1: TEXT PREPROCESSING EXPLORATION\n",
     "# ========================================================\n",
     "\n",
     "'''\n",
-    "This code takes the sample text column (which we had extracted from the csv file's 'tweet' column) and processed it to make it all lowercase text, removed punctuation and numbers. \n",
+    "Work with the function below and explore the different parameters.\n",
+    "What does each of them appear to do to the output? How might this be helpful?\n",
     "'''\n",
-    "from pickle import FALSE, TRUE\n",
-    "\n",
-    "\n",
     "preprocessed_text = preprocess_text(\n",
     "    sample_text, \n",
-    "    lowercase=True,        \n",
-    "    remove_punctuation=False,   \n",
-    "    remove_numbers=False        \n",
+    "    lowercase=True,            \n",
+    "    remove_punctuation=True,   \n",
+    "    remove_numbers=True        \n",
     ")\n",
     "\n",
     "print(\"--- Preprocessed Text ---\")\n",
@@ -293,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 1,
    "id": "8a6801e9-1240-4942-b051-2ad4c1ea3e9b",
    "metadata": {},
    "outputs": [],
@@ -321,56 +255,19 @@
    "execution_count": null,
    "id": "e1685f09-0c4e-4c1d-9e72-48e29c1340b3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "--- Text Tokenization ---\n",
-      "Number of sentences: 2712\n",
-      "Number of words: 76462\n",
-      "\n",
-      "First 3 sentences:\n",
-      "  1. the only thing i got from college is a caffeine addiction\n",
-      "i love it when professors draw a big question mark next to my answer on an exam because i’m always like yeah i don’t either ¯\\_(ツ)_/¯\n",
-      "remember the hundred emails from companies when covid started getting real?\n",
-      "  2. i’ve gotten three in regards to support for protests.\n",
-      "  3. and only @savagexfenty shared helpful links and actually said black lives matter... we love capitalism 🥰🙌🏼\n",
-      "today my pop-pop told me i was not “forced” to go to college 🙃 okay sure sureeee\n",
-      "@volphancarol @littlewhitty @mysticalmanatee i did too, and i also reported cancun cruz not worrying about the heartbeats of his constituents without electricity or heat when he fled to mexico.\n",
-      "\n",
-      "First 20 words:\n",
-      "['the', 'only', 'thing', 'i', 'got', 'from', 'college', 'is', 'a', 'caffeine', 'addiction', 'i', 'love', 'it', 'when', 'professors', 'draw', 'a', 'big', 'question']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# ========================================================\n",
     "# PART 2: TOKENIZATION EXPLORATION\n",
     "# ========================================================\n",
     "\n",
     "'''\n",
-    "This is the codes results with various settings of the prepocessed function.\n",
+    "Here you will complete several different tasks to get an understanding of the tokenization function\n",
     "\n",
-    "LOWC. | PUNCT.| NUMB. || SENTENCES | WORDS |\n",
-    "===========================================|\n",
-    "TRUE  | TRUE  | TRUE  || 1         | 67120 |\n",
-    "-------------------------------------------|\n",
-    "TRUE  | TRUE  | FALSE || 1         | 67693 |\n",
-    "TRUE  | FALSE | TRUE  || 2762      | 76004 |\n",
-    "FALSE | TRUE  | TRUE  || 1         | 67120 |\n",
-    "-------------------------------------------|\n",
-    "FALSE | FALSE | TRUE  || 2787      | 76009 |\n",
-    "FALSE | TRUE  | FALSE || 1         | 67693 |\n",
-    "TRUE  | FALSE | FALSE || 2712      | 76462 |\n",
-    "-------------------------------------------|\n",
-    "FALSE | FALSE | FALSE || 2762      | 76492 |\n",
-    "-------------------------------------------|\n",
-    "\n",
-    "It seems that the most effective way to tokenize the text is to keep the punctuation, keep the numbers, and set the text to be lowercase, or keep it as lowercase. I assume that we would want to retain more information in the text by not removing the numbers. If we did not care about any possible numerical values, we would want to remove numbers, remove capitalization, but keep punctuation. (so, in summary, TRUE FALSE FALSE, or TRUE FALSE TRUE.) \n",
-    "\n",
-    "Removing the punctuation is the worst thing you can do to accurately parse the text into sentences. The function interprets every tweet as a singular, very long sentence.\n",
+    "    1. Return to part one (text preprocessing) and set all of the parameters to be true, run this code block\n",
+    "    2. Return to part one (text preprocessing) and play around with the parameters to determine how many total sentences\n",
+    "       there were in the tweets.\n",
+    "    \n",
     "'''\n",
     "\n",
     "sentences, words = tokenize_text(preprocessed_text)\n",
@@ -388,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": null,
    "id": "e069c30e-dc7c-46da-8ca7-702a7890dc39",
    "metadata": {},
    "outputs": [],
@@ -397,6 +294,9 @@
     "# PART 3: STOPWORD REMOVAL FUNCTION\n",
     "# ========================================================\n",
     "\n",
+    "'''\n",
+    "No inputs necessary here, just run this code block.\n",
+    "'''\n",
     "\n",
     "def remove_stopwords(word_list, custom_stopwords=None):\n",
     "    \"\"\"\n",
@@ -417,33 +317,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": null,
    "id": "c10dc39d-1488-4e2d-85b2-134a217a2852",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "--- After Stopword Removal ---\n",
-      "Original word count: 76462\n",
-      "Filtered word count: 45867\n",
-      "Removed 30595 stopwords\n",
-      "\n",
-      "First 20 filtered words:\n",
-      "['thing', 'got', 'college', 'caffeine', 'addiction', 'love', 'professors', 'draw', 'big', 'question', 'mark', 'next', 'answer', 'exam', '’', 'always', 'like', 'yeah', '’', 'either']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# ========================================================\n",
     "# PART 3: STOPWORD REMOVAL EXPLORATION\n",
     "# ========================================================\n",
     "\n",
     "'''\n",
-    "Google says:\n",
-    "In NLP, stop words are inconsequential words with little value in helping processors answer queries. The specific stop words can vary based on context.\n",
+    "Using your favorite search engine look up what a stopword is in NLP.\n",
+    "\n",
+    "Once you understand what a stop word is run the code as it is written here.\n",
+    "How many words were removed?\n",
     "\n",
     "Now add some of your own stop words. \n",
     "What words can you add to remove the largest number of words?\n",
