--- a/Lab_Assignment_07.ipynb
+++ b/Lab_Assignment_07.ipynb
@@ -4171,7 +4171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": null,
    "id": "039d917f-3457-4324-a12c-144c38b2d602",
    "metadata": {},
    "outputs": [
@@ -4181,7 +4181,7 @@
      "text": [
       "<>:5: SyntaxWarning: invalid escape sequence '\\_'\n",
       "<>:5: SyntaxWarning: invalid escape sequence '\\_'\n",
-      "C:\\Users\\Sethc\\AppData\\Local\\Temp\\ipykernel_25688\\1252049849.py:5: SyntaxWarning: invalid escape sequence '\\_'\n",
+      "C:\\Users\\Sethc\\AppData\\Local\\Temp\\ipykernel_25688\\2444266264.py:5: SyntaxWarning: invalid escape sequence '\\_'\n",
       "  '''\n"
      ]
     },
@@ -4191,43 +4191,11 @@
      "text": [
       "\n",
       "--- Sentiment Analysis ---\n",
-      "Sentiment analysis by sentence:\n",
-      "\n",
-      "Sentence 1: The only thing I got from college is a caffeine addiction\n",
-      "I love it when professors draw a big question mark next to my answer on an exam because I’m always like yeah I don’t either ¯\\_(ツ)_/¯\n",
-      "Remember the hundred emails from companies when Covid started getting real?\n",
-      "  Negative: 0.000\n",
-      "  Neutral: 0.818\n",
-      "  Positive: 0.182\n",
-      "  Compound: 0.836\n",
-      "\n",
-      "Sentence 2: I’ve gotten three in regards to support for protests.\n",
-      "  Negative: 0.164\n",
-      "  Neutral: 0.603\n",
-      "  Positive: 0.233\n",
-      "  Compound: 0.202\n",
-      "\n",
-      "Sentence 3: And only @SavageXFenty shared helpful links and actually said black lives matter... we love capitalism 🥰🙌🏼\n",
-      "Today my pop-pop told me I was not “forced” to go to college 🙃 okay sure sureeee\n",
-      "@VolphanCarol @littlewhitty @mysticalmanatee I did too, and I also reported Cancun Cruz not worrying about the heartbeats of his constituents without electricity or heat when he fled to Mexico.\n",
-      "  Negative: 0.000\n",
-      "  Neutral: 0.769\n",
-      "  Positive: 0.231\n",
-      "  Compound: 0.928\n",
-      "\n",
-      "Sentence 4: @jimrossignol I choose to interpret it as \"XD\": the universal emoticon for laughing at those poor, poor folks in Ubisoft's marketing department who have to deal with that branding until the servers quietly shut down 8 months after launch.\n",
-      "  Negative: 0.143\n",
-      "  Neutral: 0.783\n",
-      "  Positive: 0.074\n",
-      "  Compound: -0.459\n",
-      "\n",
-      "Sentence 5: Why would Alexa's recipe for Yorkshire pudding be a bhaji yorkshire pudding ?\n",
-      "  Negative: 0.000\n",
-      "  Neutral: 1.000\n",
-      "  Positive: 0.000\n",
-      "  Compound: 0.000\n",
-      "\n",
-      "Average compound score: 0.151\n"
+      "Overall sentiment analysis:\n",
+      "  Negative: 0.103\n",
+      "  Neutral: 0.717\n",
+      "  Positive: 0.180\n",
+      "  Compound: 1.000\n"
      ]
     }
    ],
@@ -4237,15 +4205,12 @@
     "# ========================================================\n",
     "\n",
     "'''\n",
-    "Run this block of code as it is to see the output.\n",
-    "\n",
-    "Now change analyze by sentence to True. What happens?\n",
-    "\n",
     "With it set to be false: \n",
     "  Negative: 0.103\n",
     "  Neutral: 0.717\n",
     "  Positive: 0.180\n",
     "  Compound: 1.000\n",
+    "  \n",
     "  \n",
     "With it set to be true:\n",
     "Average compound score: 0.151\n",
@@ -4285,10 +4250,9 @@
     "  Neutral: 1.000\n",
     "  Positive: 0.000\n",
     "  Compound: 0.000\n",
-    "\n",
     "'''\n",
     "\n",
-    "analyze_by_sentence = True  \n",
+    "analyze_by_sentence = False  \n",
     "\n",
     "sentiment_results = analyze_sentiment(sample_text, analyze_by_sentence)\n",
     "\n",
