--- a/Lab_Assignment_07.ipynb
+++ b/Lab_Assignment_07.ipynb
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 211,
    "id": "ae4f8ff7-b0bc-47fa-b4df-39da7a4715a1",
    "metadata": {},
    "outputs": [],
@@ -3880,7 +3880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": null,
    "id": "c10dc39d-1488-4e2d-85b2-134a217a2852",
    "metadata": {},
    "outputs": [
@@ -3913,7 +3913,7 @@
     "Adding the words to the list of stopwords increased the number of words removed from 30595 to 30904 words.\n",
     "'''\n",
     "\n",
-    "custom_stopwords = ['like','bruh', 'slay', 'sure'] # Brain rot words I thought would be good to remove\n",
+    "custom_stopwords = ['like', 'bruh', 'slay', 'sure'] # Brain rot words I thought would be good to remove\n",
     "\n",
     "\n",
     "filtered_words = remove_stopwords(words, custom_stopwords)\n",
@@ -3928,7 +3928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": null,
    "id": "deb4ee95-886b-4210-8647-73b11874d8c5",
    "metadata": {},
    "outputs": [],
@@ -3936,10 +3936,6 @@
     "# ========================================================\n",
     "# PART 4: STEMMING AND LEMMATIZATION FUNCTION\n",
     "# ========================================================\n",
-    "\n",
-    "'''\n",
-    "No inputs necessary here, just run this code block.\n",
-    "'''\n",
     "\n",
     "# Function to perform stemming and lemmatization\n",
     "def stem_and_lemmatize(word_list):\n",
@@ -3957,7 +3953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": null,
    "id": "1db06c48-4434-4d33-bc45-fadc8c47ba27",
    "metadata": {},
    "outputs": [
@@ -3991,9 +3987,8 @@
     "# ========================================================\n",
     "\n",
     "'''\n",
-    "Stemming and lemimatization are two different techniques used in NLP to reduce words to their base or root form to help making machine analyzation easier to do.\n",
+    "Stemming and lemmatizations are two different techniques used in NLP to reduce words to their base or root form to help making machine analyzation easier to do.\n",
     "\n",
-    "Once you understand what these methods are, run the following code and look at the output.\n",
     "The original, stemmed, and lemmatized words shown do not have much change from the original word. this suggest the language used in tweets are usually in simple forms.\n",
     "'''\n",
     "\n",
